# genetic-rack

./: craco.config.js  package.json  tsconfig.paths.json
genetic-wasm/: .gitignore  Cargo.toml  LICENSE_MIT
genetic-wasm/abi/: Cargo.toml
genetic-wasm/abi/bindings/: AttributeDescriptor.ts
genetic-wasm/abi/src/: attributes.rs  buffer.rs  interleaved.rs  lib.rs
genetic-wasm/abi_macro/: Cargo.toml
genetic-wasm/abi_macro/src/: lib.rs
genetic-wasm/bindings/: AttrDefs.ts  AttrSpan.ts  AttrVals.ts  AttrWidth.ts  Attribute.ts  AttributeBuffer.ts  BufferF32.ts  CompAttrDefs.ts  Component.ts  Foo.ts  InterleavedAttributeDescriptor.ts  Mass.ts  ObjAttr.ts  Point.ts  PosAttr.ts  Position.ts  PtrBufF32.ts  SimObj.ts  Source.ts
genetic-wasm/src/: attributes.rs  gen.rs  gravity.rs  lib.rs  memory.rs  physics.rs  points.rs  sim.rs  utils.rs
genetic-wasm/src/abi/: buffer.rs  interleaved.rs  mod.rs  never.rs
genetic-wasm/src/memory/: buf.rs  buffer.rs  components.rs  comps.rs  mod.rs  ptrbuf.rs  simobjs.rs
genetic-wasm/src/sim/: builder.rs  mod.rs
public/: index.html
src/components/App/: index.tsx
src/components/Box/: index.tsx
src/components/WaveNode/: index.tsx
src/hooks/: debug_fps.ts
