[package]
name = "genetic-wasm"
version = "0.1.0"
authors = ["Thor Correia <thor.lucas@berkeley.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
abi = { path = "./abi" }
abi_macro = { path = "./abi_macro" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
web-sys = "0.3.55"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
glam = { version = "0.14.0", features = ["serde"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
ts-rs = "6.0.5"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
